apps/base/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy: {}
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2001
        runAsGroup: 2000
      containers:
        - image: lscr.io/linuxserver/radarr:6.4.4.10685-ls319
          name: radarr
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: 288Mi
            requests:
              cpu: 3m
              memory: 288Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: run
          emptyDir:
            sizeLimit: 500Mi
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
