apps/base/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
