apps/base/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.local
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 80
            path: /
            pathType: Prefix
